feat: single file publish
