# LocalAIAgent.API/openapi/LocalAIAgent.API.json
@@ -317,102 +317,6 @@
         }
       }
     },
-    "/api/Login/register": {
-      "post": {
-        "tags": [
-          "Login"
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UserRegistrationDto"
-              }
-            },
-            "text/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UserRegistrationDto"
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "$ref": "#/components/schemas/UserRegistrationDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserDto"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserDto"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserDto"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/Login/login": {
-      "post": {
-        "tags": [
-          "Login"
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UserLoginDto"
-              }
-            },
-            "text/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UserLoginDto"
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "$ref": "#/components/schemas/UserLoginDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserDto"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserDto"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserDto"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/Login/logout": {
       "post": {
         "tags": [
@@ -660,10 +564,134 @@
           }
         }
       }
+    },
+    "/api/UserPreferences/api/GetAiSettings": {
+      "post": {
+        "tags": [
+          "UserPreferences"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "integer",
+                "format": "int32"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "type": "integer",
+                "format": "int32"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "type": "integer",
+                "format": "int32"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/AiSettingsDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AiSettingsDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AiSettingsDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/SaveAiSettings": {
+      "post": {
+        "tags": [
+          "UserPreferences"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AiSettingsDto"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AiSettingsDto"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/AiSettingsDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
+      "AiSettingsDto": {
+        "required": [
+          "endpointUrl",
+          "modelId"
+        ],
+        "type": "object",
+        "properties": {
+          "userId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "modelId": {
+            "type": "string",
+            "nullable": true
+          },
+          "apiKey": {
+            "type": "string",
+            "nullable": true
+          },
+          "endpointUrl": {
+            "type": "string",
+            "nullable": true
+          },
+          "temperature": {
+            "type": "number",
+            "format": "double"
+          },
+          "topP": {
+            "type": "number",
+            "format": "double"
+          },
+          "frequencyPenalty": {
+            "type": "number",
+            "format": "double"
+          },
+          "presencePenalty": {
+            "type": "number",
+            "format": "double"
+          }
+        },
+        "additionalProperties": false
+      },
       "Algorithm": {
         "enum": [
           -65535,
@@ -1263,70 +1291,13 @@
         },
         "additionalProperties": false
       },
-      "Fido2Credential": {
-        "required": [
-          "credentialName"
-        ],
+      "Fido2Id": {
         "type": "object",
         "properties": {
-          "type": {
-            "$ref": "#/components/schemas/PublicKeyCredentialType"
-          },
-          "id": {
+          "value": {
             "type": "string",
             "format": "byte",
             "nullable": true
-          },
-          "publicKey": {
-            "type": "string",
-            "format": "byte",
-            "nullable": true
-          },
-          "transports": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/AuthenticatorTransport"
-            },
-            "nullable": true
-          },
-          "isBackupEligible": {
-            "type": "boolean"
-          },
-          "isBackedUp": {
-            "type": "boolean"
-          },
-          "aaGuid": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "user": {
-            "$ref": "#/components/schemas/Fido2User"
-          },
-          "attestationFormat": {
-            "type": "string",
-            "nullable": true
-          },
-          "attestationObject": {
-            "type": "string",
-            "format": "byte",
-            "nullable": true
-          },
-          "attestationClientDataJson": {
-            "type": "string",
-            "format": "byte",
-            "nullable": true
-          },
-          "credentialName": {
-            "type": "string",
-            "nullable": true
-          },
-          "regDate": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "signCount": {
-            "type": "integer",
-            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -1623,36 +1594,24 @@
       },
       "User": {
         "required": [
-          "fido2Id"
+          "fido2Id",
+          "id",
+          "username"
         ],
         "type": "object",
         "properties": {
           "id": {
-            "type": "integer",
-            "format": "int32"
+            "$ref": "#/components/schemas/UserId"
           },
           "fido2Id": {
-            "type": "string",
-            "format": "byte",
-            "nullable": true
+            "$ref": "#/components/schemas/Fido2Id"
           },
           "username": {
             "type": "string",
             "nullable": true
           },
-          "passwordHash": {
-            "type": "string",
-            "nullable": true
-          },
           "preferences": {
             "$ref": "#/components/schemas/UserPreferences"
-          },
-          "fido2Credentials": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Fido2Credential"
-            },
-            "nullable": true
           }
         },
         "additionalProperties": false
@@ -1671,16 +1630,12 @@
         },
         "additionalProperties": false
       },
-      "UserLoginDto": {
+      "UserId": {
         "type": "object",
         "properties": {
-          "username": {
-            "type": "string",
-            "nullable": true
-          },
-          "password": {
-            "type": "string",
-            "nullable": true
+          "value": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -1718,12 +1673,13 @@
         "additionalProperties": false
       },
       "UserPreferences": {
+        "required": [
+          "dislikes",
+          "interests",
+          "prompt"
+        ],
         "type": "object",
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
           "prompt": {
             "type": "string",
             "nullable": true
@@ -1740,27 +1696,6 @@
             "items": {
               "type": "string"
             },
-            "nullable": true
-          },
-          "userId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "user": {
-            "$ref": "#/components/schemas/User"
-          }
-        },
-        "additionalProperties": false
-      },
-      "UserRegistrationDto": {
-        "type": "object",
-        "properties": {
-          "username": {
-            "type": "string",
-            "nullable": true
-          },
-          "password": {
-            "type": "string",
             "nullable": true
           }
         },
